# mcp_servers

./: .env.example  .env.vault  .gitignore  CLAUDE.md  FUTURE.md  NEW_SERVER.md  README.md  THOUGHTS.md  deploy.py  deploy_skills.py  generate-config.js  new_mcp_guidelines.md  new_skill_guidelines.md  nia.md  package.json  setup.js
.claude/: settings.local.json
6f/2fb3bb4ae4/: metadata.json
aa/fb3a3e590d/: metadata.json
clis/new_setup/: README.md  pyproject.toml
clis/new_setup/new_setup/: cli.py
clis/new_setup/new_setup/templates/default/: template.toml
clis/new_setup/new_setup/templates/default/backend/: .gitignore  CLAUDE.md
clis/new_setup/new_setup/templates/default/config/: CLAUDE.md
config/claude-code/: mcp-servers.json
config/cursor/: mcp-servers.json
docs/: claude-code-bash-logging-hook-windows.md  claude-code-skill-hooks.md
hooks/: quickstart.md
mcps/: .env.vault  README.md  package.json
mcps/drive/: README.md  accounts.json.example  auth.py  drive_client.py  pyproject.toml  server.py  setup_server.py
mcps/glpi/: ENDPOINTS.md  FUTURE.md  GLPI.md  README.md  glpi_client.py  pyproject.toml  server.py  test_api.py
mcps/gmail/: .mcpbignore  DEPLOY_CLOUD.md  README.md  auth.py  gmail_client.py  manifest.json  server.py  setup_server.py
mcps/jira/: jira_client.py  server.py
mcps/obsidian/: README.md  obsidian_client.py  server.py
mcps/scripts/: add-mcps-to-claude-code.js  build-mcps.js
scripts/: add-mcps-to-claude-code.js  bitwarden-setup.js  build-mcps.js  generate-config.js  retrieve_memories.py
skills/: SKILLS.md
(+78 files in other folders)
